--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1192,50 +1192,46 @@ footer-desktop{
   }
 }
 
-#course-window{
-
-  width: 60%;
-  height: 440px;
-  margin: auto;
+#course-window {
   background-color: #439A86;
-  margin-top: 6%;
 }
-#course-window h1{
-  text-align: center;
-   font-size: 30px;
-   color: white;
-   padding-top: 10px;
-}
-#video-window{
 
-  width: 80%;
-  height: 300px;
-  margin: auto;
-  background-color: #000;
-  margin-top: 2%;
+@media only screen and (max-width: 768px) {
+  #course-window {
+    width: 90%;
+  }
 }
-#next-lesson{
-  margin-left: 45%;
+
+#course-window h1 {
+  text-align: center;
+  font-size: 30px;
+  color: white;
+  padding-top: 10px;
+}
+
+#next-lesson {
+  /* margin-left: 45%; */
   border-radius: 20px;
   border-color: white;
   border-style: solid;
   color: white;
   background-color: black;
-  width: 80px;
+  /* width: 80px; */
   font-size: 20px;
-  margin-top: 5px;
+  /* margin-top: 5px; */
 }
-#close-lesson{
-  margin-left: 45%;
+
+#close-lesson {
+  /* margin-left: 45%; */
   border-radius: 20px;
   border-color: white;
   border-style: solid;
   color: white;
   background-color: black;
-  width: 80px;
+  /* width: 80px; */
   font-size: 20px;
-  position: absolute;
-  left: 1%;
-  top: 80%;
+  /* position: absolute; */
+  /* left: 1%; */
+  /* top: 80%; */
   display: none;
 }
